2007-05-24  Adrian Schuur

	* objectpath.c:
	Fixed 1722381 sfcc fails on getInstance for associations

2007-03-15  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* frontend/sfcc/sfcclient.c:
	Fixed 1681555: sfcc backend selection via "scheme" parameter

	* cimc/cimcft.h, TEST/test_gc.c, TEST/test_qualifiers.c: 
	Fixed 1681487: sfcc cimc constclass definition incompatible with cmci
	constclass definition, adjusted function table.

	* frontend/sfcc/sfcclient.c: 
	Fixed 1681489: sfcc connection release function restore leads to 
	failures.

2007-03-07  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* backend/cimxml/instance.c, backend/cimxml/objectpath.c,
	backend/cimxml/property.c, backend/cimxml/qualifier.c: 
	Fixed 1675554: case sensitive comparisons

	* TEST/show.c, TEST/test_ecn_ssl.c, TEST/test_gc.c:
	Updated test programs, partially related to 1675554.

2007-02-28  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* frontend/sfcc/sfcclient.c: 
	Fixed 1670019: connection failures on second parallel connection
	Uninitialized variables and a deadlock situation didn't allow
	to run more than on connection at a given point in time.

2007-02-27  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* sfcc.spec.in, configure.ac: 
	Feature 1663663: add specfile for RPM builds.

2007-02-07  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* configure.ac, Makefile.am: 
	Feature 1654428: remove libsfcUtil from sfcc

2007-01-18  Sven Schuetz

	* array.c, cimXmlParser.c, client.c, value.c, cimXmlParser.h
	Fixed 1637057: Arrays not yet supported as function arguments

2007-01-18  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-119.boeblingen.de.ibm.com>

	* cimXmlResp.y: 
	Fixed 1636714: removed incorrect rquirement for RETURNVALUE tag
	in method responses.

2006-12-06  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* sfcUtil/hashtable.c, sfcUtil/libsfcUtil.Versions: