@@ -4,6 +4,7 @@ Changes in 2.0.1:
 =================
 Bugs:
 - 1722381 sfcc fails on getInstance for associations
+- 1726113 Parser not clearing qualifier cache
 
 Changes in 2.0.0:
 =================
