@@ -1,3 +1,8 @@
+2007-05-31  Adrian Schuur
+
+	* cimXmlResp.y:
+	Fixed 1726113: Parser not clearing qualifier cache
+
 2007-05-24  Adrian Schuur
 
 	* objectpath.c:
